# cpm

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  cpm.data  main.cpp
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.yaml  feature_request.md  feature_request.yaml
.github/workflows/: codeql.yml  repo-cleanup.yml
defaults/: .cpm.txt  .gitignore.txt  main.txt
defaults/c/: CMakeLists.txt.txt
defaults/cpp/: CMakeLists.txt.txt
docs/: Doxyfile
include/: api.h  commands.h  config.h  cpm_store.h  data.h  directory.h  file.h  logger.h  misc.h  updates.h
include/commands/: class_command.h  command.h  command_manager.h  config_command.h  fpair_command.h  help_command.h  init_command.h  scan_command.h  struct_command.h  version_command.h
src/: api.cpp  commands.cpp  commands.h  config.cpp  cpm.cpp  cpm_store.cpp  data.cpp  directory.cpp  directory.h  file.cpp  logger.cpp  main.cpp  misc.cpp  updates.cpp
src/commands/: class_command.cpp  command.cpp  command_manager.cpp  config_command.cpp  fpair_command.cpp  help_command.cpp  init_command.cpp  scan_command.cpp  struct_command.cpp  version_command.cpp
src/project_templates/default/: CMakeLists.txt.tmp  README.md.tmp
src/project_templates/git/: .gitignore.tmp
tests/: .gitignore  CMakeLists.txt  cpm
tests/src/: main.cpp
